@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2025-09-30T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-10-01T00:00:00Z",
@@ -60,6 +60,11 @@
     {
       "timestamp": "2025-10-12T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
