@@ -1,3 +1,12 @@
+2025-10-14T01:04:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18482284945 # 1281
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-14
+* notice: last 14d: unq all: 7 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 2979 5369 / 3000 5391
+* notice: next accum: outdated-unq outdated-all / unq all: 2979 5369 / 3001 5392
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-09-30 2025-10-13]
+
 2025-10-13T01:08:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18452269593 # 1279
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-13
